# wasi-usb

./: .gitignore  .gitmodules  README.md  imports.rs
libusb-port/: wasm_backend.c
usb-native/: Cargo.toml
usb-native/src/: bulk.rs  inter.rs  main.rs  readlot.rs  throughput.rs
usb-wasi-cguest/: .gitignore  CMakeLists.txt  README.md  main.c
usb-wasi-cguest/bindings/: cguest.c  cguest.h
usb-wasi-guest/: Cargo.toml  Makefile  README.md
usb-wasi-guest/examples/: bulk_loopback.rs  clear_reset.rs  config.rs  dual_transfer.rs  hotplug.rs  interrupt_poll.rs  iso_example.rs  kernel_driver.rs  lsusb.rs  old_read.rs  read_and_hash.rs  read_latency.rs  read_throughput.rs  readlot.rs  smoke.rs  streams.rs
usb-wasi-guest/src/: main.rs
usb-wasi-guest/wit/: world.wit
usb-wasi-host/: Cargo.toml  README.md
usb-wasi-host/src/: main.rs
wit/: descriptors.wit  device.wit  errors.wit  events.wit  hotplug.wit  transfers.wit  types.wit  world.wit
