[package]
name = "usb-wasi-host"
version = "0.1.0"
edition = "2021"

[dependencies]
libusb1-sys = "0.7.0"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
wasmtime = { version = "31.0.0", features = ["component-model-async"]}
wasmtime-wasi = "31.0.0"
env_logger = "0.11.8"
log = "0.4.26"
once_cell = "1.20.3"
libc = "0.2.170"

